fixed spacing on start page

--- a/src/Pages/Start/Start.module.css
+++ b/src/Pages/Start/Start.module.css
@@ -2,16 +2,9 @@
     text-align: center;
 }
 
-.InputsDiv {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    height: 40%;
-}
-
 .Input {
     width: 60%;
     height: 50px;
     text-align: center;
+    margin-top: 30px;
 }
